2012-06-13   D. V. Wiebe <getdata@ketiltrout.net> svn:721
	GetData-0.8.0rc2.

2012-06-04   D. V. Wiebe <getdata@ketiltrout.net> svn:720
	* bindings/cxx/dirfile.cpp bindings/cxx/fragment.cpp
	bindings/cxx/getdata/dirfile.h bindings/cxx/getdata/fragment.h: off_t
	-> gd_off64_t.

2012-06-02   D. V. Wiebe <getdata@ketiltrout.net> svn:717
	* src/internal.h (_GD_AbsPath): Allow s == NULL.

2012-05-25   D. V. Wiebe <getdata@ketiltrout.net> svn:712
	* bindings/cxx/fragment.cpp (Fragment::Fragment Fragment::SetEndianness)
	bindings/cxx/dirfile.cpp (Dirfile::NFrames Dirfile::EoF Dirfile::BoF
	Dirfile::GetData Dirfile::PutData Dirfile::FrameNum Dirfile::Seek
	Dirfile::Tell): Call the 64-bit API.

	* src/getdata.h.in: Support GD_64BIT_API and use configure to define
	gd_off64_t.
	* src/internal.h bindings/cxx/getdata/dirfile.h: Define GD_64BIT_API before
	including getdata.h.

	* test/Makefile.am man/Makefile.am: Remove LFS_TRANSITIONAL_API (always
	enabled).

	* confihure.ac: Figure out a suitable type for gd_off64_t.  Remove
	LFS_TRANSITIONAL_API conditional.

2012-05-23   D. V. Wiebe <getdata@ketiltrout.net> svn:710
	* test/test.h: Don't redefine isnan if it's okay as-is.

	* src/open.c (_GD_CreateDirfile): Don't unnecessarily disable mtime
	acquisition.
	* cmake/test/CMakeLists.txt: enable desync checks.

	* src/compat.c (gd_strtod): Fix sign check.

2012-05-22   D. V. Wiebe <getdata@ketiltrout.net> svn:709
	* cmake/CMakeLists.txt: Update definitons.  Support GD_UTIL.
	* cmake/test/CMakeLists.txt: Update the list of excluded tests.
	* cmake/src/CMakeLists.txt: Support GD_DEBUG and conditionally build debug.c.
	* cmake/bindings/cxx/CMakeLists.txt: Support GD_TEST.
	* cmake/util/CMakeLists.txt cmake/bindings/cxx/test/CMakeLists.txt: Added.

	* src/internal.h: Define PRNsize_t and PRNssize_t to get around printf()s
	which don't recognise the "z" length modifier.  Changed everywhere.  Handle
	basename, offsetof, strtod.

	* src/compat.c (basename gd_strtod): Added.