@@ -1,3 +1,8 @@
+2012-06-25   D. V. Wiebe <getdata@ketiltrout.net> svn:723
+	* src/flush.c (_GD_FindVersion): ALIAS means >= 9.
+
+	* util/checkdirfile.c: Grammar.
+
 2012-06-13   D. V. Wiebe <getdata@ketiltrout.net> svn:721
 	GetData-0.8.0rc2.
 
